[vividus-plugin-db] Add FROM_DB table transformer